--- a/cadastro.css
+++ b/cadastro.css
@@ -11,6 +11,12 @@ body{
     text-align: center;
     background: white;
     border-radius: 0.5em;
-    margin: 200px;
+    border: 50%;
     padding: 20px;
+}
+h1{
+    text-align: center;
+    background: white;
+    color: blueviolet;
+    padding-bottom: 10px;
 }
