--- a/cadastro.css
+++ b/cadastro.css
@@ -2,8 +2,7 @@ body{
     background: rgb(137, 47, 197);
 }
 #headerContainer{
-    padding-top: 10px;
-    padding-left: 5px;
+    /* padding-left: 5px; */
     background: rgb(248, 247, 246);
     padding-bottom: 10px;
 }
@@ -19,4 +18,5 @@ h1{
     background: white;
     color: blueviolet;
     padding-bottom: 10px;
+    border-bottom: 10px;
 }
