--- a/cadastro.css
+++ b/cadastro.css
@@ -2,8 +2,7 @@ body{
     background: rgb(137, 47, 197);
 }
 #headerContainer{
-    /* padding-left: 5px; */
-    background: rgb(248, 247, 246);
+    background: white;
     padding-bottom: 10px;
 }
 #for{
@@ -19,4 +18,27 @@ h1{
     color: blueviolet;
     padding-bottom: 10px;
     border-bottom: 10px;
+}
+#formulario{
+    position: relative;
+    display: flex;
+    align-content: center;
+    text-align: center;
+    border-radius: 0.5em;
+    background: white;
+    margin: 10px auto;
+    padding: 20px;
+    width: 100%;
+    max-width: 700px;
+    margin-left: 25%;
+    margin-top: 100px;
+}
+#field{
+    font-family: 'DM Mono', monospace;
+
+}
+#confirmar{
+    text-align: center;
+    margin: 10px;
+    margin-top: 10px;
 }
